--- a/HouseRentingSystem/Views/Shared/Components/MainMenuComponent/Default.cshtml
+++ b/HouseRentingSystem/Views/Shared/Components/MainMenuComponent/Default.cshtml
@@ -1,5 +1,14 @@
 ﻿<ul class="navbar-nav flex-grow-1">
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">All Houses</a>
     </li>
+    @if (this.User != null && this.User.Identity != null && this.User.Identity.IsAuthenticated)
+    {
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="House" asp-action="Index">My Houses</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="House" asp-action="Index">Add a House</a>
+        </li>
+    }
 </ul>
