--- a/HouseRentingSystem/Views/Shared/Components/MainMenuComponent/Default.cshtml
+++ b/HouseRentingSystem/Views/Shared/Components/MainMenuComponent/Default.cshtml
@@ -5,10 +5,10 @@
     @if (this.User != null && this.User.Identity != null && this.User.Identity.IsAuthenticated)
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="House" asp-action="Index">My Houses</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="House" asp-action="Mine">My Houses</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="House" asp-action="Index">Add a House</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="House" asp-action="Add">Add a House</a>
         </li>
     }
 </ul>
