--- a/HouseRentingSystem/Views/Shared/_LoginPartial.cshtml
+++ b/HouseRentingSystem/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Agent" asp-action="Index">Become an Agent</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Agent" asp-action="Become">Become an Agent</a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
