--- a/HouseRentingSystem/Views/Shared/Components/MainMenuComponent/Default.cshtml
+++ b/HouseRentingSystem/Views/Shared/Components/MainMenuComponent/Default.cshtml
@@ -2,7 +2,7 @@
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">All Houses</a>
     </li>
-    @if (this.User != null && this.User.Identity != null && this.User.Identity.IsAuthenticated)
+    @if (this.User?.Identity?.IsAuthenticated ?? false)
     {
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="House" asp-action="Mine">My Houses</a>
