--- a/HouseRentingSystem/Views/_ViewImports.cshtml
+++ b/HouseRentingSystem/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using HouseRentingSystem.Components
 @using HouseRentingSystem.Models.Home
 @using HouseRentingSystem.Models.House
+@using HouseRentingSystem.Models.Agent
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
