--- a/HouseRentingSystem/Views/_ViewImports.cshtml
+++ b/HouseRentingSystem/Views/_ViewImports.cshtml
@@ -1,7 +1,7 @@
 ﻿@using HouseRentingSystem
 @using HouseRentingSystem.Models
 @using HouseRentingSystem.Components
-@using HouseRentingSystem.Models.Home
-@using HouseRentingSystem.Models.House
-@using HouseRentingSystem.Models.Agent
+@using HouseRentingSystem.Core.Models.Home
+@using HouseRentingSystem.Core.Models.House
+@using HouseRentingSystem.Core.Models.Agent
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
