Implemented the house creating logic, added the view. Added a filter attribute that checks if the user is an agent.

--- a/HouseRentingSystem/Views/House/Add.cshtml
+++ b/HouseRentingSystem/Views/House/Add.cshtml
@@ -3,3 +3,9 @@
 }
 
 <h2 class="text-center">@ViewBag.Title</h2>
+
+<partial name="_HouseFormPartial" mmodel="@Model" />
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
